@@ -7,7 +7,6 @@ import com.example.moyeorak.entity.Region;
 import com.example.moyeorak.entity.User;
 import com.example.moyeorak.repository.NoticeRepository;
 import com.example.moyeorak.repository.RegionRepository;
-import com.example.moyeorak.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -16,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.nio.file.AccessDeniedException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -25,18 +23,17 @@ public class NoticeService {
 
     private final NoticeRepository noticeRepository;
     private final RegionRepository regionRepository;
-    private final UserRepository userRepository;
 
     // ✅ 공지 생성
     @Transactional
     public NoticeDto create(User author, NoticeRequest request) {
-        log.info("[CREATE] 공지 생성 요청: title={}, regionId={}, authorId={}",
+        log.info("[CREATE] 공지 생성 요청 - title: {}, regionId: {}, authorId: {}",
                 request.getTitle(), request.getRegionId(), author.getId());
 
         Region region = regionRepository.findById(request.getRegionId())
                 .orElseThrow(() -> new IllegalArgumentException("지역 정보가 존재하지 않습니다."));
 
-        if (!author.getId().equals(region.getManager().getId())) {
+        if (!region.getManager().getId().equals(author.getId())) {
             throw new IllegalArgumentException("해당 지역의 관리자만 공지를 작성할 수 있습니다.");
         }
 
@@ -47,29 +44,29 @@ public class NoticeService {
                 .author(author)
                 .build();
 
-        return mapToDto(noticeRepository.save(notice));
+        return toDto(noticeRepository.save(notice));
     }
 
-    // ✅ 단건 조회
+    // ✅ 공지 단건 조회
     public NoticeDto getNotice(Long id) {
-        log.info("[GET] 공지 단건 조회 요청 - ID: {}", id);
-        Notice notice = findNotice(id);
-        return mapToDto(notice);
+        log.info("[GET] 공지 단건 조회 요청 - id: {}", id);
+        return toDto(findNotice(id));
     }
 
     // ✅ 지역별 공지 조회
     public List<NoticeDto> getNoticesByRegionId(Long regionId) {
-        log.info("[GET] 지역별 공지 조회 요청 - regionId: {}", regionId);
+        log.info("[GET] 지역별 공지 목록 조회 - regionId: {}", regionId);
         return noticeRepository.findByRegionId(regionId).stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(this::toDto)
+                .toList();
     }
 
-    // ✅ 공지 수정 (작성자 검증 포함)
+    // ✅ 공지 수정 (작성자만 가능)
     @Transactional
     public NoticeDto updateNotice(Long noticeId, Long userId, NoticeRequest request) throws AccessDeniedException {
-        Notice notice = noticeRepository.findById(noticeId)
-                .orElseThrow(() -> new EntityNotFoundException("공지사항을 찾을 수 없습니다."));
+        log.info("[UPDATE] 공지 수정 요청 - noticeId: {}, userId: {}", noticeId, userId);
+
+        Notice notice = findNotice(noticeId);
 
         if (!notice.getAuthor().getId().equals(userId)) {
             throw new AccessDeniedException("수정 권한이 없습니다.");
@@ -78,13 +75,14 @@ public class NoticeService {
         notice.setTitle(request.getTitle());
         notice.setContent(request.getContent());
 
-        return NoticeDto.fromEntity(noticeRepository.save(notice));
+        return toDto(noticeRepository.save(notice));
     }
 
-    // ✅ 공지 삭제 (작성자 검증 포함)
+    // ✅ 공지 삭제 (작성자만 가능)
     @Transactional
     public void deleteNotice(Long id, Long userId) throws AccessDeniedException {
-        log.info("[DELETE] 공지 삭제 요청 - ID: {}, by User: {}", id, userId);
+        log.info("[DELETE] 공지 삭제 요청 - noticeId: {}, userId: {}", id, userId);
+
         Notice notice = findNotice(id);
 
         if (!notice.getAuthor().getId().equals(userId)) {
@@ -94,22 +92,22 @@ public class NoticeService {
         noticeRepository.delete(notice);
     }
 
-    // 🔒 전체 조회 (관리자 전용 등 목적일 경우)
+    // ✅ 전체 공지 조회 (관리자용)
     public List<NoticeDto> getAllNotices() {
         log.info("[GET] 전체 공지 목록 조회");
         return noticeRepository.findAll().stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(this::toDto)
+                .toList();
     }
 
-    // ========== 내부 유틸 메서드 ==========
+    // ========== 내부 메서드 ==========
 
     private Notice findNotice(Long id) {
         return noticeRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("공지사항이 존재하지 않습니다."));
     }
 
-    private NoticeDto mapToDto(Notice notice) {
+    private NoticeDto toDto(Notice notice) {
         return NoticeDto.fromEntity(notice);
     }
 }
